--- a/src/app/modules/kata/product/basket/basket.component.css
+++ b/src/app/modules/kata/product/basket/basket.component.css
@@ -286,3 +286,25 @@
       visibility: hidden;
     }
   }
+  table {
+    width: 100%;
+  }
+  .mat-form-field-empty.mat-form-field-label {
+    color: green;
+  }
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  td, th {
+    width: 25%;
+  }
+
+  .example-card {
+    max-width: 400px;
+  }
+  
+  .example-header-image {
+    background-size: cover;
+  }
