--- a/src/app/modules/kata/product/product.component.css
+++ b/src/app/modules/kata/product/product.component.css
@@ -286,3 +286,15 @@
       visibility: hidden;
     }
   }
+  table {
+    width: 100%;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  td, th {
+    width: 25%;
+  }
