--- a/src/app/modules/kata/product/product.component.css
+++ b/src/app/modules/kata/product/product.component.css
@@ -298,3 +298,11 @@
   td, th {
     width: 25%;
   }
+
+  .center-screen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    min-height: 80vh;
+  }
