--- a/src/app/modules/kata/product/product.component.html
+++ b/src/app/modules/kata/product/product.component.html
@@ -1,9 +1,4 @@
-<p>product worksh</p>
-
-
-  <h2>Categories</h2>
-
-  <input type="hidden" #selection>
+<input type="hidden" #selection>
 
   <div class="card-container">
     <div class="card card-small" *ngFor="let p of getCtegories" (click)="selection.value = p.value ; getProductsByIdCategoryID(p.value )"tabindex="0" >
@@ -16,7 +11,11 @@
 
     <!-- Terminal -->
     
-
+    <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Products</mat-card-title>
+        </mat-card-header>
       
 
          <mat-form-field>
@@ -26,11 +25,12 @@
           
           <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
-          
+             <!-- <mat-table [dataSource]='dataSource' matSort>-->
+                
               <!-- ID Column -->
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                <td mat-cell *matCellDef="let row" > {{row.name}} </td>
+              <ng-container matColumnDef="nameProduct">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> nameProduct </th>
+                <td mat-cell *matCellDef="let row" > {{row.nameProduct}} </td>
               </ng-container>
           
              
@@ -63,28 +63,23 @@
               <ng-container matColumnDef="actions">
                   <th mat-header-cell *matHeaderCellDef> Action </th>
                   <td mat-cell *matCellDef="let row"> 
-                      <a class="btn" class="text-primary" (click)="openDialog(row)"> AddPanier </a>
+                      <a class="btn" class="text-primary" (click)="openDialog(row)"> AddChart </a>
                   </td>
                 </ng-container>
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
               </tr>
-            </table>
-          
+           </table>
+          <!--</mat-table>-->
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
           </div>
 
          
-    
-             
-              
-           
-              
-          <div>
-              <app-basket
-              [firstName]="firstName"
-              [lastName]="lastName"
-              [productListbyIdToChild]="productListbyIdToChild"
-              ></app-basket>
-      
+    </mat-card>
+ 
+          <div  class="center-screen">
+              <app-basket 
+              [productListbyIdToChild]="productListbyIdToChild">
+            </app-basket>
+          </div>
